test coverage 100% for all codes necessary for edit user profile front-end and back-end integration. Files are User Service and User Profile Controller.